# testarge

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/testarge/: __init__.py  __main__.py  core.py
tests/: test_core.py
